--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,8 @@
 }
 .topbar{
     position: relative;
-    left: 25%;
     background-color: #38A3A5;
-    width: 50%;
-    height: 10%;
-    box-shadow: 0px 0px 63px -30px rgba(0,0,0,1);
+    box-shadow: 0px 0px 63px -30px rgb(48, 48, 48);
 }
 .astext {
     font-family: 'Quicksand', sans-serif;
@@ -24,4 +21,17 @@
 #ml {
     position: relative;
     left: 12%;
+}
+.font-gb {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 30px;
+}
+.btn-top{
+    border: none;
+    background-color: inherit;
+    padding: 7px 14px;
+    font-size: 30px;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 200;
 }
